# OpenCVProject

./: CMakeLists.txt  Doxyfile
include/: ColorDetector.h  ColorMatcher.h  ImageLoader.h  ImageProcessor.h  NormalizeImage.h  SelectArea.h
src/: ColorDetector.cpp  ColorMatcher.cpp  ImageLoader.cpp  ImageProcessor.cpp  NormalizeImage.cpp  SelectArea.cpp  main.cpp
